kubernetes/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: meine-stadt-transparent
        resources:
          limits:
            memory: 500Mi
            cpu: "1"
          requests:
            memory: 250Mi
            cpu: 500m
