kubernetes/worker-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: frontend
        image: meine-stadt-transparent
        command: ["/app/.venv/bin/python", "/app/manage.py", "qcluster"]
        resources:
          limits:
            memory: 8Gi
            cpu: "16"
          requests:
            memory: 2Gi
            cpu: "1"
