kubernetes/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000

  selector:
    app: backend
